# Alfred

./: .gitattributes  .gitignore  .grype.yaml  .mcp.json  ATTRIBUTION.md  CLAUDE.md  LICENSE.onyx  LOOP-DESIGN.md  LOOP-INTEGRATION.md  LOOP.md  NOTICE  README.md  SECURITY.md  UPSTREAM.md  alfred-holmes-integration-brief.md  debug-nip46.mjs  index.html  lighthouserc.json  package-lock.json  package.json  renovate.json  vite.config.ts  vitest.config.ts  zapstore.yaml
.github/workflows/: ci.yml  release.yml
THIRD-PARTY-NOTICES/: onyx-MIT.txt
docs/: goose.md  mcp-server.md  release-process.md  threat-model.md  windows-verification.md
docs/audit/: epistemic-canon-landing.md  fix-wave-w1.md  holmes-stage1-track1-mapping.md  phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  safety-spine-verification.md  stage-d-vulnerability-decision.md  study-instrument-landing.md
docs/beta/: RELEASE-NOTES-v0.1.0-beta.3.md  RELEASE-NOTES-v0.1.0-beta.4.md  known-issues.md  rollback-checklist.md
docs/decisions/: 0001-skills-sourcing.md  0002-xlsx-registry-replacement.md  0003-skill-recipe-format-and-skillsmith.md  0004-in-app-ai-keep-or-cut.md  0005-evidence-frontmatter-fields.md  0006-brand-bible-precedence.md  0007-interactive-icon-contract.md  0008-holmes-guard-adoption.md  0009-per-installer-updater-feed.md  0010-no-hosted-web-app.md
goose-recipes/: vault-research.yaml  vault-summary.yaml
mcp/: markdown.test.ts  markdown.ts  naddr.test.ts  naddr.ts  run.ts  search.test.ts  search.ts  server.test.ts  server.ts  transport.ts  tsconfig.json  vault-fs.test.ts  vault-fs.ts
scripts/: artifact-guard-probe.mjs  check-contrast.mjs  check-guard-boundary.mjs  check-tauri-alignment.mjs  stage-goose-sidecar.mjs  updater-feed.mjs
src/: App.tsx  __ci_canary__.test.ts  index.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/desktop/: alfred.desktop
src-tauri/icons/: icon.icns
src-tauri/src/: analytical.rs  analytical_tests.rs  direct_chat_policy.rs  direct_chat_policy_tests.rs  guard.rs  guard_tests.rs  job_guard.rs  job_guard_tests.rs  lib.rs  main.rs  telemetry.rs  telemetry_tests.rs  vault_path_tests.rs
(+200 files in other folders)
