[package]
name = "alfred"
version = "0.1.1"
description = "Sovereign, local-first, Nostr-native PKM for agentic AI development"
authors = ["Martin Montero"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/MartinMontero/Alfred"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "alfred_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-haptics = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-biometric = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"
walkdir = "2"
parking_lot = "0.12"
notify = "6"
percent-encoding = "2.3"
reqwest = { version = "0.12.28", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["fs", "sync", "time"] }
dirs = "5.0"
# Born-redacted local telemetry store (src/telemetry.rs). Bundled = compile SQLite
# in, no system dependency; gives direct PRAGMA / wal_checkpoint / VACUUM control.
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-updater = "2"

[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"] }
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-window-state = "2"

# Windows-only: Job Object orphan-guard for the goose sidecar (src/job_guard.rs).
# Pinned to 0.61 to match the copy Tauri already resolves (no duplicate). Win32_Security
# is required because CreateJobObjectW's signature references SECURITY_ATTRIBUTES.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
